--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>The ToDo Project</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <script src="./dist/main.js" defer></script>
 </head>
 <body>
     <div class="header"><h1>The ToDo Project</h1></div>
