Added basic functionality for adding form inputs to a list

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <th>Status</th>
                         </tr>
                     </thead>
-                    <tbody id="bookList">
+                    <tbody id="projectList">
                         <tr>
                             <td>Do weekly grocery shopping</td>
                             <td>Out of milk, remember we have Jenny and Mike coming over for dinner on Thursday</td>
