Status button can change color but no toggle back

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 </select>
                             </td>
                             <td><button id="steps">Add Steps</button></td>
-                            <td id="statusCell"><button id="status">Incomplete</button></td>
+                            <td id="statusCell"><button class="status" id="status">Incomplete</button></td>
                         </tr>
                         <tr>
                             <td>Do weekly grocery shopping</td>
@@ -64,7 +64,7 @@
                                 </select>
                             </td>
                             <td><button id="steps">Add Steps</button></td>
-                            <td id="statusCell"><button id="status">Incomplete</button></td>
+                            <td id="statusCell"><button class="status" id="status">Incomplete</button></td>
                         </tr>
                     </tbody>
                 </table>
