Projects initialized with an input field to add steps and js module added to remove projects

--- a/index.html
+++ b/index.html
@@ -33,39 +33,27 @@
                             <th>Description</th>
                             <th id="dateColumn">Due Date</th>
                             <th>Priority</th>
-                            <th>Steps</th>
                             <th>Status</th>
+                            <th>Remove</th>
                         </tr>
                     </thead>
                     <tbody id="projectList">
-                        <tr>
-                            <td>Do weekly grocery shopping</td>
-                            <td>Out of milk, remember we have Jenny and Mike coming over for dinner on Thursday</td>
-                            <td>Today</td>
+                    
+                       <!-- <tr id="stepRow">
                             <td>
-                                <select name="priority" id="priority"> 
-                                    <option value="high">High</option>
-                                    <option value="medium">Medium</option>
-                                    <option value="Low">Low</option>
-                                </select>
-                            </td>
-                            <td><button id="steps">Add Steps</button></td>
-                            <td id="statusCell"><button class="status" id="status">Incomplete</button></td>
-                        </tr>
-                        <tr>
-                            <td>Do weekly grocery shopping</td>
-                            <td>Out of milk, remember we have Jenny and Mike coming over for dinner on Thursday</td>
-                            <td>Today</td>
+                                <input type="text" id="addStep">
+                                <input type="submit" value="Add Step">
+                            </td>   
                             <td>
-                                <select name="priority" id="priority"> 
-                                    <option value="high">High</option>
-                                    <option value="medium">Medium</option>
-                                    <option value="Low">Low</option>
-                                </select>
+                                <ul>
+                                    
+                                </ul>
                             </td>
-                            <td><button id="steps">Add Steps</button></td>
-                            <td id="statusCell"><button class="status" id="status">Incomplete</button></td>
-                        </tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr> -->
                     </tbody>
                 </table>
             </div>
